# mebula

./: .flake8  .gitignore  CHANGELOG  LICENSE  README.rst  citation.cff  mypy.ini  pyproject.toml  release.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
mebula/: __init__.py  azure.py  dict_filter.py  google.py  oracle.py  py.typed
tests/: __init__.py  test_azure.py  test_dict_filter.py  test_google.py  test_mebula.py  test_oracle.py
