[tool.poetry]
name = "mebula"
version = "0.2.0"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/milliams/mebula"

[tool.poetry.dependencies]
python = "^3.6"
oci = {version = "^2.10.0", optional = true}
google-api-python-client = {version = "^1.7.11", optional = true}
azure = {version = "^4.0.0", optional = true}
lark-parser = {version = "^0.8.1", optional = true}

[tool.poetry.extras]
azure = ["azure"]
google = ["google-api-python-client", "lark-parser"]
oracle = ["oci"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.761"
flake8 = "^3.7.9"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
