# SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "mebula"
version = "0.2.9"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/milliams/mebula"

[tool.poetry.dependencies]
python = "^3.6.2"
oci = {version = "^2.10.0", optional = true}
google-api-python-client = {version = ">=1.7.11,<3.0.0", optional = true}
azure-mgmt-compute = {version = "^21.0.0", optional = true}
lark-parser = {version = ">=0.9,<0.12", optional = true}
azure-identity = {version = "^1.6.0", optional = true}

[tool.poetry.extras]
azure = ["azure-mgmt-compute", "azure-identity"]
google = ["google-api-python-client", "lark-parser"]
oracle = ["oci"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.1"
mypy = "^0.910"
flake8 = "^4.0.1"
coverage = "^6.0.1"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
