# SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "mebula"
version = "0.2.10"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/milliams/mebula"

[tool.poetry.dependencies]
python = "^3.8.0"
oci = {version = "^2.10.0", optional = true}
google-api-python-client = {version = ">=1.7.11,<3.0.0", optional = true}
azure-mgmt-compute = {version = ">=21,<28", optional = true}
lark = {version = "^1.0", optional = true}
azure-identity = {version = "^1.6.0", optional = true}

[tool.poetry.extras]
azure = ["azure-mgmt-compute", "azure-identity"]
google = ["google-api-python-client", "lark"]
oracle = ["oci"]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^1.8"
coverage = "^7.4.3"
ruff = "^0.2.2"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
